--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <Preference
         app:iconSpaceReserved="false"
         app:key="Logout"
-        app:title="Log out" />
+        app:title="@string/logout" />
+
 </androidx.preference.PreferenceScreen>
